objects/Mass_Email_Request_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mass Email Requests detail</relationshipLabel>
        <relationshipName>Mass_Email_Requests_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mass Email Requests detail</relationshipLabel>
        <relationshipName>Mass_Email_Requests_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Mass Email Requests detail</relationshipLabel>
        <relationshipName>Mass_Email_Requests_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mass_Email_Request__c</fullName>
        <label>Mass Email Request</label>
        <referenceTo>Mass_Email_Request__c</referenceTo>
        <relationshipLabel>Mass Email Requests detail</relationshipLabel>
        <relationshipName>Mass_Email_Requests_detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Theard_Id_Formula__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Case__c,5) &amp; SUBSTITUTE(Left(RIGHT(Case__c,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Case__c,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theard Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <label>Thread Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Email Request Detail</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Mass Email Request Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Email Requests detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>